<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Ui.TripDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:src="@drawable/icons_back"
            app:backgroundTint="@color/orange_200"
            app:fabSize="mini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/trip_detail"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="19/12/2021"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Rp 40.000"
                        android:textColor="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="70px"
                            android:layout_height="70px"
                            android:layout_gravity="center"
                            app:tint="@color/black"
                            android:src="@drawable/icon_location_user" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_origin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_light"
                                android:text="@string/lokasi_jemput"
                                android:textSize="10sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/txt_originPickup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/demo_address"
                                android:textColor="@color/black" />

                        </LinearLayout>





                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="13dp"
                        android:background="@color/orange_200" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="70px"
                            android:layout_height="70px"
                            android:layout_gravity="center"
                            app:tint="@color/merah"
                            android:src="@drawable/icon_finish_location" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_tujuan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_light"
                                android:text="@string/lokasi_tujuan"
                                android:textSize="10sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/txt_destinationRider"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/demo_destionation"
                                android:textColor="@color/black" />

                        </LinearLayout>




                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_orange"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_potoDriver"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_account_circle_24"
                            android:tint="@color/white"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_namaDriver"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/nama_driver"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/txt_namaUsaha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/nama_usaha"
                                android:textColor="@color/black" />

                        </LinearLayout>
                    </LinearLayout>





                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Resi Mobil Derek"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/base_fare"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_base_fare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Rp 40.000"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/distance"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_distanceDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="4.67 km"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/duration"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_durationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="4.67 km"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/harga_total"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_total_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Rp 640.000"
                        android:textColor="@color/black" />


                </LinearLayout>

                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="Bagaimana pengalaman Anda dengan Mobil Derek ini? \nUmpan balik Anda penting untuk meningkatkan kualitas layanan kami"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:theme="@style/RatingBar"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/reviewEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kotak2"
                    android:hint="Type review..."
                    android:minHeight="100dp"
                    android:padding="10dp"
                    android:layout_margin="20dp"/>

                <Button
                    android:id="@+id/btnSubmitReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Submit Review"
                    android:textAllCaps="false"/>


            </LinearLayout>

        </ScrollView>



        <ProgressBar
            android:id="@+id/progress_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</LinearLayout>